@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/11/15:
+- TestEngine: UI: display failed counter in colored button while running (since tooltip is
+  likely not accessible while running tests).
+
 2023/11/14:
 - TestEngine: Update for BeginChild() internal naming changes in IMGUI_VERSION_NUM >= 18999.
 
